Added /api/search/products/{type}
